--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.563.0",
     "next": "^14.2.0",
+    "openai": "^6.17.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-markdown": "^9.0.1",
